fix letter overflow

--- a/assets/styles/card-letter.css
+++ b/assets/styles/card-letter.css
@@ -1,8 +1,9 @@
 .letter-card{
   padding: 15px;
-  min-width: 50vw;
+  width: 50vw;
   height: fit-content;
   background: white;
+  max-width:900px;
   border-radius: 5px;
   box-shadow: 1px 1px 5px 2px #dedede;
 }
